# Kronop

./: .eas.json  .gitignore  AppEntry.js  CREDENTIALS_DEBUG.txt  GoogleService-Info.plist  MANUAL_BUILD_INSTRUCTIONS.md  README.md  app.config.js  app.json  babel.config.js  build-script.sh  eas-build-fix.js  eas.json  google-services.json  index.js  jsconfig.json  metro.config.js  package-lock.json  package.json  photo_error_report.js  server.js  service.js  test-apis.js  test_all_music_files.js  tsconfig.json
.eas/: build.json  project.json
.expo/types/: router.d.ts
Apptepbar/Databes/: LiveToolScreen.tsx  NotesToolScreen.tsx  PhotoToolScreen.tsx  ReelsToolScreen.tsx  SongToolScreen.tsx  StoryToolScreen.tsx  VideoToolScreen.tsx  index.ts
Apptepbar/Databes/components/: ThreeDotMenu.tsx
Apptepbar/Databes/controller/: index.ts
Apptepbar/Live/: BufferManager.rs  GhostFeedManager.ts  RangeRequestManager.rs  Zero.tsx  ZeroLogic.ts
Apptepbar/Live.tsx/: CloudConfig.ts  GhostFeedManager.ts  Zero.tsx  ZeroLogic.ts
Apptepbar/Live.tsx/Audio/: ClockSynchronizer.ts
Apptepbar/Live.tsx/Components/: ChannelName.tsx  CommentButton.tsx  InteractionBar.tsx  ShareButton.tsx  StarButton.tsx  SupportButton.tsx  ViewerCount.tsx
Apptepbar/Live.tsx/Core/: CloudConfig.ts
Apptepbar/Live.tsx/Native/: NPUController.ts  TurboBridge.ts
Apptepbar/Live.tsx/Player/: VideoPlayer.tsx
Apptepbar/Live.tsx/Storage/: LocalVault.js  LocalVault.ts
Apptepbar/Live/Audio/: AtomicSync.cpp  AtomicSync.h
Apptepbar/Live/Components/: ChannelInfo.tsx  ChannelLogo.tsx
Apptepbar/Live/Core/: BufferManager.rs  MultiThreadedDownloader.rs  RangeRequestManager.rs
Apptepbar/Live/Native/: NPUController.ts  NativeRenderer.cpp  TurboBridge.ts
Apptepbar/Music/: MusicProvider.tsx  index.ts  music.tsx
Apptepbar/Music/app/: _layout.tsx  index.tsx
Apptepbar/Music/components/: PlayPauseButton.tsx  StarButton.tsx  index.ts
Apptepbar/Music/constants/: config.ts  r2Config.ts  styles.ts  theme.ts
Apptepbar/Music/data/: categories.ts  channels.ts  songs.ts  users.ts
Apptepbar/Music/hooks/: useAudioPlayer.ts  useFavorites.ts
Apptepbar/Music/layout/: MusicBar.tsx
Apptepbar/Music/player/: MusicEngine.ts
Apptepbar/Music/scripts/: reset-project.js
Apptepbar/Music/services/: audioService.ts  channelService.ts  favoriteService.ts  notificationService.ts  r2Service.ts  songCacheService.ts  userService.ts
Apptepbar/Music/types/: index.ts
Apptepbar/Notes/app/: _layout.tsx  index.tsx
Apptepbar/Notes/components/: index.ts
Apptepbar/Notes/constants/: theme.ts
Apptepbar/Notes/hooks/: useNote.ts
Apptepbar/Notes/services/: noteService.ts
Apptepbar/Story/: ExampleUsage.tsx  README_INTEGRATION.md  StoryTestScreen.tsx  index.ts
Apptepbar/Story/components/: OwnerStoryBox.tsx  StarButton.tsx  StoryItem.tsx  StoryPlayer2.tsx  StoryPlayer3.tsx  StorySection.tsx  StoryViewCounter.tsx  StoryViewer.tsx  StoryViewer2.tsx  StoryViewer3.tsx  StoryViewer4.tsx  profile.tsx
Apptepbar/Story/data/: mockStoryData.ts
Apptepbar/Story/models/: StoryModel.js  StorySchema.js
Apptepbar/Video/: VIDEO_PLAYER_SPECS.md  r2VideoService.js  searchEngine.ts  theme.ts
Apptepbar/Video.tsx/: ThemeConstants.ts
Apptepbar/Video/app/: _layout.tsx  (+6 more)
Apptepbar/login/: KronopAuthGuard.js  KronopAuthHandler.js  KronopLoginUI.js  KronopSessionConfig.js  Loginscreen.tsx
Apptepbar/photos/: PhotoPlayer.tsx  PhotoPlayer2.tsx  PhotoPlayer3.tsx  fetchingInformation.ts  index.tsx  r2_service.ts
Apptepbar/reels/: CloudConfig.ts  GhostFeedManager.ts  InstantLoader.ts  SmartPreloader.ts  Zero.tsx  Zero2.tsx  ZeroLogic.ts  cloudin.js  index.ts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
api/: auth.js  content.js  photos.js  storage.js  support.js  users.js
app/: Story.tsx  _layout.tsx  chat.tsx  edit-profile.tsx  help-center.tsx  live.tsx  music.tsx  notifications.tsx  onboarding.tsx
app/(tabs)/: Notes.tsx  Reels.tsx  Video.tsx  _layout.tsx  databas.tsx  index.tsx  live.tsx  profile.tsx
app/Databes/: BankAccount.tsx  LiveToolScreen.tsx  NotesToolScreen.tsx  PhotoToolScreen.tsx  ReelsToolScreen.tsx  SongToolScreen.tsx  StoryToolScreen.tsx  VideoToolScreen.tsx  index.ts
app/live/: stream.tsx
app/menu/: index.tsx
app/photos/: [category].tsx
app/profile/: index.tsx
app/search-user/: index.tsx  profile.tsx
app/settings/: _layout.tsx  index.tsx
app/video/: [id].tsx
appColor/: AppColors.ts  ProfileTheme.ts
components/: NetworkRetry.tsx
components/ActionButtons/: ReportButton.tsx
components/common/: AppLogo.tsx  HeaderButton.tsx  StatusBarOverlay.tsx
components/feature/: index.ts
components/screens/: ViralScreen.tsx
components/test/: ZeroDataReWatchTest.tsx
components/upload/: live.js  photo.js  r2Server.js  reels.js  song.js  story.js  video.js
components/upload/upload..kronop/Stoy_AI/RTN_Kronop_Bridge/: CMakeLists.txt
components/upload/upload..kronop/video_AI/AI4/Kronop_Cleaner AI/: CMakeLists.txt  quick_stress_test.py
components/upload/upload..kronop/video_AI/AI4/Kronop_Cleaner AI/src/integration/: FinalOutputCollector.cpp  FinalOutputCollector.hpp
config/: backendConfig.js  db.js
constants/: Config.ts  mockData.ts  network.ts  styles.ts  theme.ts
context/: AuthContext.tsx
controllers/: contentController.js  userController.js
enjan/: rotate-work.md
enjan/knowledge-base/: kronop-player-
frontend/: WalletConnect.tsx
ios/: Podfile
ios/kronop/: Info.plist
ios/kronop.xcodeproj/: project.pbxproj
middleware/: authMiddleware.js
models/: Content.js  PhotoSchema.js  User.js  VideoSchema.js
patches/: expo-modules-autolinking+3.0.24.patch  react-native-track-player+4.1.2.patch  react-native-worklets+0.7.2.patch
plugins/: android-dependency-fix.js
routes/: content.js  storageRoutes.js  stories.js
scripts/: clearMongoDB.js  createDemoUser.js  createViralIndexes.js  directMongoClear.js  productionClear.js  setup-hermes.js  testPhotoUploadEnv.js  testR2Connection.js  uploadTestReels.js
src/config/: api.js  firebase.js
template/auth/: index.ts
(+410 files in other folders)
